[gd_scene load_steps=8 format=3 uid="uid://4t4no0cijcis"]

[ext_resource type="Script" path="res://Script/main_menu.gd" id="1_bl8bn"]
[ext_resource type="PackedScene" uid="uid://do6ggst70cjg1" path="res://Scene/main_menu_background.tscn" id="1_nlbyq"]
[ext_resource type="FontFile" uid="uid://buxu0pmq3usqx" path="res://Art/Fonts/Orbitron-SemiBold.ttf" id="2_f5xh7"]
[ext_resource type="FontFile" uid="uid://dap108k12avt2" path="res://Art/Fonts/SpaceGrotesk-Regular.ttf" id="3_nvvo5"]
[ext_resource type="PackedScene" uid="uid://iro1thlgsw11" path="res://Scene/settings_menu.tscn" id="5_3b6iw"]

[sub_resource type="LabelSettings" id="LabelSettings_87tsx"]
font = ExtResource("2_f5xh7")
font_size = 32
font_color = Color(0.25098, 0.913725, 1, 1)
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_0ddep"]
font = ExtResource("3_nvvo5")
font_size = 24

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bl8bn")

[node name="MainMenuBackground" parent="." instance=ExtResource("1_nlbyq")]

[node name="MainMenuOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameTitle" type="Label" parent="MainMenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 44.0
offset_top = -4.0
offset_right = 395.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Galactic Void"
label_settings = SubResource("LabelSettings_87tsx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenuOptions"]
layout_mode = 0
offset_left = 168.0
offset_top = 80.0
offset_right = 312.0
offset_bottom = 114.0
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 20
text = "New Game"

[node name="LoadButton" type="Button" parent="MainMenuOptions"]
layout_mode = 0
offset_left = 168.0
offset_top = 128.0
offset_right = 312.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 20
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MainMenuOptions"]
layout_mode = 0
offset_left = 168.0
offset_top = 176.0
offset_right = 312.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 20
text = "Settings
"

[node name="QuitButton" type="Button" parent="MainMenuOptions"]
layout_mode = 0
offset_left = 184.0
offset_top = 224.0
offset_right = 296.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 12
text = "Quit
"

[node name="LoadGameMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 156.5
offset_top = 0.5
offset_right = 283.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
text = "Load Game"
label_settings = SubResource("LabelSettings_0ddep")

[node name="Slot1" type="Button" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 174.0
offset_top = 43.0
offset_right = 269.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 12
text = "empty"

[node name="Slot2" type="Button" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = 83.0
offset_right = 270.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 12
text = "empty"

[node name="Slot3" type="Button" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = 124.0
offset_right = 270.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 12
text = "empty"

[node name="BackButton" type="Button" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = 178.0
offset_right = 112.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nvvo5")
theme_override_font_sizes/font_size = 12
text = "Back
"

[node name="SettingsMenu" parent="." instance=ExtResource("5_3b6iw")]
layout_mode = 1

[editable path="SettingsMenu"]
